Fix code blocks from breaking page layout. Hide github button on small screens.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -89,7 +89,7 @@ pre {
 	background-color: #f8f8f8;
 	border: 1px solid #d2d2d2;
 	padding: 1em;
-	white-space: pre-wrap;
+	overflow-x: scroll;
 	code {
 		border-width: 0;
 	}
